# datalib

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
libs/: CMakeLists.txt  structures.cpp  structures.h
src/: CMakeLists.txt  datastructures.cpp
test/: CMakeLists.txt  data_test.cpp
